--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -9,5 +9,6 @@
   "share": "مشاركة",
   "language": "اللغة",
   "english": "الانجليزية",
-  "arabic": "العربية"
+  "arabic": "العربية",
+  "scan-something": "امسح الرمز"
 }
