--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -9,5 +9,6 @@
   "share": "Share",
   "language": "Language",
   "english": "English",
-  "arabic": "Arabic"
+  "arabic": "Arabic",
+  "scan-something": "Scan something"
 }
