--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -34,5 +34,6 @@
   "no-file-selected": "No file selected",
   "file not in pdf format or corrupted": "File not in pdf format or corrupted",
   "press-on-file-icon-to-select-an-file-first": "Press on file icon to select an file first",
-  "no-title": "No title"
+  "no-title": "No title",
+  "downloading": "Downloading..."
 }
