add title text fileds create qr image view,create qr link view and create qr pdf view

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -35,5 +35,6 @@
   "file not in pdf format or corrupted": "الملف ليس في صيغة PDF او به مشكلة",
   "press-on-file-icon-to-select-an-file-first": "اضغط على علامة الملف لتحديد ملف اولا",
   "no-title": "بدون عنوان",
-  "downloading": "تحميل..."
+  "downloading": "تحميل...",
+  "add-title": "اضف عنوان"
 }
