--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -35,5 +35,6 @@
   "file not in pdf format or corrupted": "File not in pdf format or corrupted",
   "press-on-file-icon-to-select-an-file-first": "Press on file icon to select an file first",
   "no-title": "No title",
-  "downloading": "Downloading..."
+  "downloading": "Downloading...",
+  "add-title": "Add title"
 }
