create privacy policies view

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -36,5 +36,6 @@
   "press-on-file-icon-to-select-an-file-first": "اضغط على علامة الملف لتحديد ملف اولا",
   "no-title": "بدون عنوان",
   "downloading": "تحميل...",
-  "add-title": "اضف عنوان"
+  "add-title": "اضف عنوان",
+  "privacy-policy": "سياسة الخصوصية"
 }
