--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -36,5 +36,6 @@
   "press-on-file-icon-to-select-an-file-first": "Press on file icon to select an file first",
   "no-title": "No title",
   "downloading": "Downloading...",
-  "add-title": "Add title"
+  "add-title": "Add title",
+  "privacy-policy": "Privacy Policy"
 }
