create app icon and splash screen

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -37,5 +37,7 @@
   "no-title": "بدون عنوان",
   "downloading": "تحميل...",
   "add-title": "اضف عنوان",
-  "privacy-policy": "سياسة الخصوصية"
+  "privacy-policy": "سياسة الخصوصية",
+  "abdelrhman-hegazy": "عبدالرحمن حجازي",
+  "developed-by": "طور بواسطة"
 }
