--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -37,5 +37,7 @@
   "no-title": "No title",
   "downloading": "Downloading...",
   "add-title": "Add title",
-  "privacy-policy": "Privacy Policy"
+  "privacy-policy": "Privacy Policy",
+  "abdelrhman-hegazy": "Abdelrhman Hegazy",
+  "developed-by": "Developed by"
 }
