localization for pickImage function

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -39,5 +39,7 @@
   "add-title": "اضف عنوان",
   "privacy-policy": "سياسة الخصوصية",
   "abdelrhman-hegazy": "عبدالرحمن حجازي",
-  "developed-by": "طور بواسطة"
+  "developed-by": "طور بواسطة",
+  "done": "تم",
+  "cancel": "الغاء"
 }
