--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -39,5 +39,7 @@
   "add-title": "Add title",
   "privacy-policy": "Privacy Policy",
   "abdelrhman-hegazy": "Abdelrhman Hegazy",
-  "developed-by": "Developed by"
+  "developed-by": "Developed by",
+  "done": "Done",
+  "cancel": "Cancel"
 }
