--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -41,5 +41,8 @@
   "abdelrhman-hegazy": "Abdelrhman Hegazy",
   "developed-by": "Developed by",
   "done": "Done",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "phoneNumber": "Phone number",
+  "add-phone-number": "Add phone number",
+  "invalid-phone-number": "Invalid phone number"
 }
